Fixing header alignment

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -594,14 +594,12 @@ a.btn:hover {
 
 .btn-dark, .bg-dark {
   --tw-bg-opacity: 1;
-  background-color: rgb(38 38 38 / var(--tw-bg-opacity));
+  background-color: rgb(23 23 23 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
   color: rgb(250 250 250 / var(--tw-text-opacity));
 }
 
 .btn-dark:hover, .bg-dark:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(23 23 23 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
   color: rgb(250 250 250 / var(--tw-text-opacity));
 }
@@ -641,6 +639,9 @@ a.btn:hover {
 .input {
   display: block;
   width: 100%;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
   border-radius: 0.125rem;
   --tw-bg-opacity: 1;
   background-color: rgb(245 245 245 / var(--tw-bg-opacity));
@@ -834,8 +835,8 @@ a.btn:hover {
   margin-bottom: 0.5rem;
 }
 
-.mt-12 {
-  margin-top: 3rem;
+.mt-16 {
+  margin-top: 4rem;
 }
 
 .mb-20 {
@@ -892,6 +893,10 @@ a.btn:hover {
 
 .h-9 {
   height: 2.25rem;
+}
+
+.h-16 {
+  height: 4rem;
 }
 
 .h-6 {
@@ -986,10 +991,6 @@ a.btn:hover {
   justify-self: end;
 }
 
-.justify-self-center {
-  justify-self: center;
-}
-
 .rounded-full {
   border-radius: 9999px;
 }
@@ -1040,20 +1041,8 @@ a.btn:hover {
   fill: currentColor;
 }
 
-.fill-sky-400 {
-  fill: #38bdf8;
-}
-
-.fill-sky-500 {
-  fill: #0ea5e9;
-}
-
 .stroke-neutral-800 {
   stroke: #262626;
-}
-
-.stroke-sky-400 {
-  stroke: #38bdf8;
 }
 
 .p-1\.5 {
@@ -1084,14 +1073,6 @@ a.btn:hover {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-}
-
-.pt-4 {
-  padding-top: 1rem;
-}
-
-.pb-4 {
-  padding-bottom: 1rem;
 }
 
 .align-middle {
@@ -1155,11 +1136,6 @@ a.btn:hover {
   color: rgb(250 250 250 / var(--tw-text-opacity));
 }
 
-.text-sky-400 {
-  --tw-text-opacity: 1;
-  color: rgb(56 189 248 / var(--tw-text-opacity));
-}
-
 .text-red-500 {
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
@@ -1178,11 +1154,6 @@ a.btn:hover {
 .text-emerald-600 {
   --tw-text-opacity: 1;
   color: rgb(5 150 105 / var(--tw-text-opacity));
-}
-
-.text-sky-500 {
-  --tw-text-opacity: 1;
-  color: rgb(14 165 233 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -1394,7 +1365,7 @@ html {
   }
 }
 
-.nav {
+.translucent-blur {
   background: linear-gradient(
     91.38deg,
     #17171760 0%,
@@ -1459,11 +1430,6 @@ html {
 }
 
 @media (prefers-color-scheme: dark) {
-  .dark\:bg-neutral-700 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(64 64 64 / var(--tw-bg-opacity));
-  }
-
   .dark\:bg-neutral-800 {
     --tw-bg-opacity: 1;
     background-color: rgb(38 38 38 / var(--tw-bg-opacity));
@@ -1479,10 +1445,25 @@ html {
   }
 }
 
+@media (min-width: 768px) {
+  .md\:justify-around {
+    justify-content: space-around;
+  }
+
+  .md\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+}
+
 @media (min-width: 1024px) {
-  .lg\:px-0 {
-    padding-left: 0px;
-    padding-right: 0px;
+  .lg\:justify-evenly {
+    justify-content: space-evenly;
+  }
+
+  .lg\:px-40 {
+    padding-left: 10rem;
+    padding-right: 10rem;
   }
 }
 
@@ -1493,5 +1474,13 @@ html {
 
   .standalone\:h-24 {
     height: 6rem;
+  }
+
+  .standalone\:items-end {
+    align-items: flex-end;
+  }
+
+  .standalone\:pb-4 {
+    padding-bottom: 1rem;
   }
 }
