--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -56,7 +56,7 @@
 
   .btn-dark,
   .bg-dark {
-    @apply bg-neutral-800 hover:bg-neutral-900 text-neutral-50 hover:text-neutral-50;
+    @apply bg-neutral-900 text-neutral-50 hover:text-neutral-50;
   }
   .btn-danger,
   .bg-danger {
@@ -70,7 +70,7 @@
     @apply text-blue-400 hover:text-blue-500 hover:underline transition-all;
   }
   .input {
-    @apply p-2 rounded-sm block shadow-sm bg-neutral-100 text-neutral-800 placeholder:text-neutral-500 w-full;
+    @apply p-2 rounded-sm block shadow-sm bg-neutral-100 text-neutral-800 placeholder:text-neutral-500 w-full appearance-none;
   }
 
   .react-calendar-tile.react-calendar__tile--active abbr {
@@ -215,7 +215,7 @@ html {
   }
 }
 
-.nav {
+.translucent-blur {
   background: linear-gradient(
     91.38deg,
     #17171760 0%,
